--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,7 @@ Thirdparty/g2o/build/
 Thirdparty/g2o/config.h
 Thirdparty/g2o/lib/
 Vocabulary/ORBvoc.txt
+Vocabulary/ORBvoc.bin
 build/
 
 lib/
@@ -49,3 +50,4 @@ cmake-build-debug/
 *.osa
 settings.json
 mono_ar
+bin_vocabulary
